syntax = "proto3";

package im.terminal.go.srv.auth.srv.auth;

service Service {
    rpc CreateUserAccessToken (Request) returns (Response) {
    }
    rpc DeleteUserAccessToken (Request) returns (Response) {
    }
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message Request {
    uint64 userId = 1;
    string userName = 2;
    string token = 3;
}

message Response {
    bool success = 1;
    Error error = 2;
    string token = 3;
}